# macro-finance-project

./: .gitignore  README.md  data.py  main.ipynb  pyproject.toml
data/: equities.parquet  two_year.parquet
